refactor: getReservationsByMember 메서드 과도한 stream 코드 수정